# github-setup-minus1chan-group

./: README.md  main.py  pyproject.toml  test.py
templates/: base.html  create_post.html  login.html  post.html  read_post.html  topic.html  topics.html  user.html
